@@ -12,18 +12,6 @@ The size of the memory chunk this module will use to store published messages, c
 When this memory is full any new request for publish a message or subscribe a channel will receive an 500 Internal Server Error response.
 
 
-h2(#push_stream_shared_memory_cleanup_objects_ttl). push_stream_shared_memory_cleanup_objects_ttl <a name="push_stream_shared_memory_cleanup_objects_ttl" href="#">&nbsp;</a>
-
-*syntax:* _push_stream_shared_memory_cleanup_objects_ttl time_
-
-*default:* _30 seconds_
-
-*context:* _http_
-
-The length of time a message or a channel will stay on garbage collection area before it is completly discarded, freeing the shared memory. The minimum length is 30 seconds to ensure that no one is using these elements.
-This operation is very important to help Nginx recycle memory consumed to create messages and channels, so do not use a large time.
-
-
 h2(#push_stream_channel_deleted_message_text). push_stream_channel_deleted_message_text <a name="push_stream_channel_deleted_message_text" href="#">&nbsp;</a>
 
 *syntax:* _push_stream_channel_deleted_message_text string_
