@@ -1,5 +1,6 @@
 h1(#changelog). Changelog
 
+* Removed push_stream_shared_memory_cleanup_objects_ttl directive
 * Changed push_stream_websocket directive to be a subtype of push_stream_subscriber directive
 * Changed push_stream_eventsource_support directive to be a subtype of push_stream_subscriber directive
 * Fix to support gzip usage
